--- a/TP-FRONTEND/.gitignore
+++ b/TP-FRONTEND/.gitignore
@@ -7,6 +7,7 @@
 /bazel-out
 
 # Node
+/node_modules
 npm-debug.log
 yarn-error.log
 
@@ -28,6 +29,7 @@ yarn-error.log
 .history/*
 
 # Miscellaneous
+/.angular/cache
 .sass-cache/
 /connect.lock
 /coverage
